--- a/src/views/adminbce.css
+++ b/src/views/adminbce.css
@@ -86,13 +86,13 @@ div.field-title{
 	height: 20px;
 }
 .naked.set-fk{
-	background: url(../icons/fk.png);
+	background: url(../../icons/fk.png);
 }
 .naked.set-pk{
-	background: url(../icons/pk.png);
+	background: url(../../icons/pk.png);
 }
 .naked.unset-fk{
-	background: url(../icons/fk-stop.png);
+	background: url(../../icons/fk-stop.png);
 }
 button{
 	cursor: pointer;
@@ -105,7 +105,7 @@ button{
 	padding: 0;
 }
 div.addm2m{
-	background: url(../icons/add.png) 4px center no-repeat #424242;
+	background: url(../../icons/add.png) 4px center no-repeat #424242;
 	height: 20;
 	padding-left: 20px;
 	text-align: right;
@@ -127,7 +127,7 @@ div.expand{
 	float: left;
 	height: 20px;
 	width: 20px;
-	background: url("../icons/expand.png") top center no-repeat transparent;
+	background: url("../../icons/expand.png") top center no-repeat transparent;
 	margin-right: 15px;
 }
 div.field-title div div.name-val{
