--- a/src/views/adminbce.css
+++ b/src/views/adminbce.css
@@ -1,22 +1,25 @@
 @CHARSET "ISO-8859-1";
 
 div.field-bloc{
-	padding: 5px;
-	margin: 5px;
-	border: 1px solid gray;
-	background-color: #E6E6E6;
-	width: 790px;
 }
 div.field-value-bloc{
 	float: left;
 	min-height: 25px;
+	margin-top: 3px;
 }
 div.field-value-bloc{
-	margin-left: 10px;
+	margin-right: 10px;
+}
+.field-data input,
+.field-data select{
+	margin-bottom: 2px;
 }
 div.field-value-bloc label{
 	display: block;
 	width: 120px;
+	font-size: 10px;
+	font-weight: bold;
+	margin-bottom: 0;
 }
 div.field-title{
 	padding: 5px;
@@ -31,47 +34,8 @@ select.multiselect{
 div.field-title{
 	background-color: white;
 }
-#tabs{
-	padding: 10px;
-}
 #data .new div.field-title{
 	background-color: #6DE26D;
-}
-#tabs ul .ui-widget-header .ui-state-active{
-	background: none;
-	background-color: #FFF;
-	border: none;
-}
-#tabs ul .ui-state-default.ui-state-active a{
-	color: black;
-}
-#tabs ul .ui-state-hover a:HOVER{
-	color: black;
-}
-#tabs ul .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited{
-	color: #D51034;
-}
-#tabs ul .ui-state-default.ui-tabs-selected{
-	background-color: white;
-}
-#tabs ul .ui-state-default{
-	background: none;
-	background-color: #AAAAAA;
-	border: none;
-}
-#tabs ul.ui-widget-header{
-	background: none;
-	background-color: #AAAAAA;
-	border: none;
-	margin-top: 20px;
-}
-
-#tabs.ui-widget-content{
-	background: none;
-	background-color: #AAA;
-}
-#tabs{
-	padding-right: 5px;
 }
 .naked{
 	border: none;
@@ -130,11 +94,69 @@ div.expand{
 	background: url("../../icons/expand.png") top center no-repeat transparent;
 	margin-right: 15px;
 }
-div.field-title div div.name-val{
+div.field-title div.name-val{
 	float: left;
-	margin-left: 20px;
 	font-variant: small-caps;
 }
+div.field-title div.active-elem{
+	float: left;
+	margin-left: 10px;
+}
+div.field-title div.active-elem input[type=checkbox]{
+	margin-bottom: 5px;
+}
+div.field-title div.name-val span.element-type{
+	font-weight: normal;
+}
 textarea{
-	width: 660px
+	width: 660px;
+	height: 100px;
+}
+div#ajaxload{
+	background: url("../../icons/ajaxload.gif") no-repeat transparent center center;
+	height: 170px;
+}
+#right-modal{
+	width: 700px;
+}
+.field-value-bloc span.label,
+#right-modal span.label
+{
+	display: block;
+	float: left;
+	margin: 3px 5px 0;
+	padding: 5px;
+	cursor: pointer;
+}
+.field-value-bloc .list input[type=checkbox]{
+	display: none;
+}
+.field-value-bloc.right label, .field-value-bloc.right span{
+	float: left;
+	width: auto;
+	margin-top: 5px;
+}
+.field-values .remove{
+	cursor: pointer;
+}
+.field-value-bloc.multi label,.field-value-bloc.multi select.available{
+	float: left;
+	width: auto;
+	padding: 4px 6px;
+}
+.field-value-bloc.multi .field-values{
+	/* clear: both; */
+}
+.field-value-bloc.multi{
+	width: 100%;
+	float: left;
+}
+.desc-titles li.active a{
+	font-weight: bold;
+}
+.desc-titles li.new a{
+	background-color: #EEE;
+}
+#right-modal .search-query{
+	margin: 10px 0;
 }
