Adding clear wappers for big fields (i.e. RicheTextRenderer)
Signed-off-by: Kevin Nguyen <k.nguyen@thecodingmachine.com>

--- a/src/Mouf/MVC/BCE/FormRenderers/Bootstrap/adds/bce-bootstrap-adds.css
+++ b/src/Mouf/MVC/BCE/FormRenderers/Bootstrap/adds/bce-bootstrap-adds.css
@@ -60,3 +60,7 @@ label.checkbox.inline{
 	display: none;
 	cursor: pointer;
 }
+.control-group.clear-wrap .controls{
+	clear: both;
+	margin-left: 0;
+}
