Removed wrapperRenderers as they are not used anymore Removed commented code
Signed-off-by: Kevin Nguyen <k.nguyen@thecodingmachine.com>

--- a/src/views/adminbce.css
+++ b/src/views/adminbce.css
@@ -154,6 +154,7 @@ div#ajaxload{
 .field-value-bloc.multi{
 	width: 100%;
 	float: left;
+	margin-top: 10px;
 }
 .desc-titles li.active a{
 	font-weight: bold;
